--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocationProviderClient</string>
+    <string name="btn_name">Get Location</string>
 </resources>
